kitten/test/org/perses/fuzzer/compiler/c/clang_crash_output_2.txt
mutant.c:1:8: warning: no previous prototype for function 'get_tp' [-Wmissing-prototypes]

void * get_tp ( )

       ^

mutant.c:1:1: note: declare 'static' if the function is not intended to be used outside of this translation unit

void * get_tp ( )

^

static 

mutant.c:1:15: warning: this old-style function definition is not preceded by a prototype [-Wstrict-prototypes]

void * get_tp ( )

              ^

fatal error: error in backend: Cannot select: intrinsic %llvm.thread.pointer

PLEASE submit a bug report to https://bugs.llvm.org/ and include the crash backtrace, preprocessed source, and associated run script.

Stack dump:

0.	Program arguments: clang-trunk -O3 -g3 -c -Wall -Wextra -Weverything mutant.c

1.	<eof> parser at end of file

2.	Code generation

3.	Running pass 'Function Pass Manager' on module 'mutant.c'.

4.	Running pass 'X86 DAG->DAG Instruction Selection' on function '@get_tp'

Stack dump without symbol names (ensure you have llvm-symbolizer in your PATH or set the environment var `LLVM_SYMBOLIZER_PATH` to point to it):

clang-trunk(+0x394c8d4)[0x55d87d77b8d4]

clang-trunk(_ZN4llvm3sys15CleanupOnSignalEm+0xe4)[0x55d87d7796f4]

clang-trunk(_ZN4llvm20CrashRecoveryContext10HandleExitEi+0xa3)[0x55d87d6c1a93]

clang-trunk(_ZN4llvm3sys7Process4ExitEib+0x22)[0x55d87d771962]

clang-trunk(+0x125df87)[0x55d87b08cf87]

clang-trunk(_ZN4llvm18report_fatal_errorERKNS_5TwineEb+0x7c)[0x55d87d6c8cac]

clang-trunk(+0x3899e34)[0x55d87d6c8e34]

clang-trunk(_ZN4llvm16SelectionDAGISel15CannotYetSelectEPNS_6SDNodeE+0x1f3)[0x55d87e798623]

clang-trunk(_ZN4llvm16SelectionDAGISel16SelectCodeCommonEPNS_6SDNodeEPKhj+0x7ba)[0x55d87e799ffa]

clang-trunk(+0x24457ef)[0x55d87c2747ef]

clang-trunk(_ZN4llvm16SelectionDAGISel22DoInstructionSelectionEv+0x3e9)[0x55d87e796b59]

clang-trunk(_ZN4llvm16SelectionDAGISel17CodeGenAndEmitDAGEv+0x82f)[0x55d87e7a12ff]

clang-trunk(_ZN4llvm16SelectionDAGISel20SelectAllBasicBlocksERKNS_8FunctionE+0xacb)[0x55d87e7a4a5b]

clang-trunk(+0x4977c8b)[0x55d87e7a6c8b]

clang-trunk(+0x24504ec)[0x55d87c27f4ec]

clang-trunk(_ZN4llvm19MachineFunctionPass13runOnFunctionERNS_8FunctionE+0x258)[0x55d87c9a0858]

clang-trunk(_ZN4llvm13FPPassManager13runOnFunctionERNS_8FunctionE+0x365)[0x55d87ce77635]

clang-trunk(_ZN4llvm13FPPassManager11runOnModuleERNS_6ModuleE+0x39)[0x55d87ce77879]

clang-trunk(_ZN4llvm6legacy15PassManagerImpl3runERNS_6ModuleE+0x382)[0x55d87ce78972]

clang-trunk(+0x3c7ea72)[0x55d87daada72]

clang-trunk(_ZN5clang17EmitBackendOutputERNS_17DiagnosticsEngineERKNS_19HeaderSearchOptionsERKNS_14CodeGenOptionsERKNS_13TargetOptionsERKNS_11LangOptionsEN4llvm9StringRefEPNSE_6ModuleENS_13BackendActionESt10unique_ptrINSE_17raw_pwrite_streamESt14default_deleteISK_EE+0x47d)[0x55d87daaf52d]

clang-trunk(+0x4aaa19f)[0x55d87e8d919f]

clang-trunk(_ZN5clang8ParseASTERNS_4SemaEbb+0x429)[0x55d87f991359]

clang-trunk(_ZN5clang13CodeGenAction13ExecuteActionEv+0x178)[0x55d87e8d7ce8]

clang-trunk(_ZN5clang14FrontendAction7ExecuteEv+0xd9)[0x55d87e189e79]

clang-trunk(_ZN5clang16CompilerInstance13ExecuteActionERNS_14FrontendActionE+0x146)[0x55d87e11cfd6]

clang-trunk(_ZN5clang25ExecuteCompilerInvocationEPNS_16CompilerInstanceE+0x930)[0x55d87e2678f0]

clang-trunk(_Z8cc1_mainN4llvm8ArrayRefIPKcEES2_Pv+0x7f6)[0x55d87b08e1f6]

clang-trunk(+0x125b538)[0x55d87b08a538]

clang-trunk(+0x417eca9)[0x55d87dfadca9]

clang-trunk(_ZN4llvm20CrashRecoveryContext9RunSafelyENS_12function_refIFvvEEE+0xbc)[0x55d87d6c195c]

clang-trunk(+0x417f44d)[0x55d87dfae44d]

clang-trunk(_ZNK5clang6driver11Compilation14ExecuteCommandERKNS0_7CommandERPS3_+0x9b)[0x55d87df80bdb]

clang-trunk(_ZNK5clang6driver11Compilation11ExecuteJobsERKNS0_7JobListERN4llvm15SmallVectorImplISt4pairIiPKNS0_7CommandEEEE+0x119)[0x55d87df816f9]

clang-trunk(_ZN5clang6driver6Driver18ExecuteCompilationERNS0_11CompilationERN4llvm15SmallVectorImplISt4pairIiPKNS0_7CommandEEEE+0x99)[0x55d87df8c2a9]

clang-trunk(main+0x18af)[0x55d87afb94ff]

/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf3)[0x7fc1584270b3]

clang-trunk(_start+0x2e)[0x55d87b08a0ae]

clang-13: error: clang frontend command failed with exit code 70 (use -v to see invocation)

clang version 13.0.0 (https://github.com/llvm/llvm-project.git 74909e4b6e9bc0da6c197cf6c4419991a8dc335f)

Target: x86_64-unknown-linux-gnu

Thread model: posix

InstalledDir: /home/cnsun/usr/bin

clang-13: note: diagnostic msg: 

********************



PLEASE ATTACH THE FOLLOWING FILES TO THE BUG REPORT:

Preprocessed source(s) and associated run script(s) are located at:

clang-13: note: diagnostic msg: /tmp/mutant-eb445d.c

clang-13: note: diagnostic msg: /tmp/mutant-eb445d.sh

clang-13: note: diagnostic msg: 



********************

